ok too much commit another fix

--- a/src/index.css
+++ b/src/index.css
@@ -379,7 +379,7 @@ redbutton:focus-visible {
 }
 
 .inputcontainerendscreenextension {
-  max-width: 250px;
+  max-width: 270px;
 }
 
 .custom-checkbox input {
